# app/4clabs-server/internal/domain/entity/nft.go
@@ -1,5 +1,7 @@
 package entity
 
+import "time"
+
 type Rarity struct {
 	Score float64 `json:"score"`
 	Rank  int     `json:"rank"`
@@ -10,6 +12,34 @@ type Traits struct {
 	Value string `json:"value"`
 }
 
+type OwnerStat struct {
+	Address     string
+	HoldingTime time.Duration
+}
+type PriceInfo struct {
+	TxHash               string
+	PriceToken           float64
+	TokenSymbol          string
+	TokenContractAddress string
+	Time                 time.Time
+}
+
+type NftStat struct {
+	LastUpdated        uint64
+	SaleNum7d          uint64
+	SaleNumAll         uint64
+	MaxPrice           PriceInfo
+	MinPrice           PriceInfo
+	PastOwners         []OwnerStat
+	CreateTime         time.Time
+	StartHoldingTime   time.Time
+	LongestHoldingTime time.Duration
+}
+
+type NftDetail struct {
+	Summary Nft
+	Stat    NftStat
+}
 type Nft struct {
 	Blockchain      string
 	CollectionName  string
@@ -20,7 +50,7 @@ type Nft struct {
 	Description     string
 	Image           string
 	AnimationUrl    string
-	OwnerAddresses []string
-	Traits         []Traits
-	Rarity         Rarity
+	OwnerAddresses  []string
+	Traits          []Traits
+	Rarity          Rarity
 }
