# app/4clabs-server/internal/ports/nft.go
@@ -1,4 +1,4 @@
-package service
+package ports
 
 import (
 	"4clabs-server/app/4clabs-server/internal/domain/entity"
@@ -7,4 +7,5 @@ import (
 
 type Query interface {
 	GetAddressNfts(ctx context.Context, address string, limit uint32, lastScore int64) ([]entity.Nft, int64, uint32, bool, error)
+	GetNftDetail(ctx context.Context, contractAddress, tokenId string) (entity.NftDetail, error)
 }
